# university-labs

./: .gitignore  README.md
Lab1/: Readme.txt
Lab1/Lab_1/: main.cpp
semester-12/docker/lab-2/: docker-compose.yaml
semester-12/docker/lab-4/: docker-compose.yaml
semester-13/: lab.dfy
semester-6/Computer-graphics/Lab_5/: widget.h  (+1 more)
semester_2/: .gitignore  readme.txt
semester_2/Lab_1/: CMakeLists.txt  Readme.txt  backup.txt  main.cpp  passwords
semester_2/Lab_2(a)/: CMakeLists.txt  array_ls.h  main.cpp  vector_ls.h
semester_2/Lab_2(b,1+2)/: CMakeLists.txt  main.cpp
semester_2/Lab_2(b,24)/: CMakeLists.txt  main.cpp
semester_2/Lab_3(a)/: CMakeLists.txt  main.cpp
semester_2/Lab_4/: Binary_Tree.cpp  Tree.cpp  main.cpp
semester_2/Lab_5/: CMakeLists.txt  bool_graph.cpp  bool_graph.h  main.cpp  matrix_graph.cpp  matrix_graph.h
semester_2/Lab_6/: Array_list.cpp  Array_list.h  Binary_tree.cpp  Binary_tree.h  CMakeLists.txt  List.cpp  List.h  element.cpp  element.h  main.cpp
semester_3/: readme.txt
semester_3/Lab_1/: CMakeLists.txt  Retrospective  binary_node.cpp  binary_node.h  file.cpp  file.h  folder.cpp  folder.h  main.cpp  readme.txt  tree_node.cpp  tree_node.h  tree_node.inc  tree_node.tpp
semester_3/Lab_1/headers/: binary_node.h  file.h  folder.h  interactive.h  my_file.h  tree_node.h
semester_3/Lab_1/includes/: binary_node.inc  tree_node.inc
semester_3/Lab_1/sources/: binary_node.cpp  file.cpp  folder.cpp  interactive.cpp  my_file.cpp  tree_node.cpp
semester_3/Project/: Readme.txt  bot.py
semester_4/lab_1/: .gitignore  main.cpp
(+352 files in other folders)
