cmake_minimum_required(VERSION 3.14)
project(Lab_6)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab_6 main.cpp
                element.cpp
                element.h
                List.h
                List.cpp
                Array_list.cpp
                Array_list.h
                Binary_tree.cpp
                Binary_tree.h)